@@ -503,10 +503,14 @@ script.on_event(defines.events.on_gui_opened, function(event)
     local entity = event.entity
     if entity ~= nil then
         player_global.entity = entity
-        local items = FilterHelper.add_items(entity, {})
-        player_global.items = items
         local active_items = FilterHelper.get_active_items(entity)
         player_global.active_items = active_items
+        local items = {}
+        for _, item in pairs(active_items) do
+            items[item] = "item/" .. item
+        end
+        FilterHelper.add_items(entity, items)
+        player_global.items = items
         if next(items) ~= nil or next(active_items) ~= nil then
             build_interface(event.player_index)
         end
